--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html lang='en'>
     <head>
-        <title>Resize</title>
+        <title>Ball it Up</title>
         <style type="text/css">
             h1{
                 position: fixed;
