--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
                 font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif 
             }
             body{
+                width: 100%;
+                height: 100%;
                 margin: 0;
+                overflow: hidden;
             }
         </style>
     </head>
